[package]
name = "nd-triangulation"
version = "0.1.0"
authors = ["Florian Barth <barth@fmi.uni-stuttgart.de>"]
edition = "2018"
description = "Arbirary dimensional triangulations using CGAL"
license = "GPL-3.0-or-later"

[dependencies]
cpp = "^0.5"

[build-dependencies]
cpp_build = "^0.5"

[dev-dependencies]
rand = "^0.7"