[package]
name = "nd-triangulation"
version = "0.3.3"
authors = ["Florian Barth <barth@fmi.uni-stuttgart.de>"]
edition = "2018"
description = "Arbitrary dimensional triangulations using CGAL"
license = "GPL-3.0-or-later"
repository = "https://github.com/Lesstat/nd-triangulation"
readme = "README.md"
documentation = "https://docs.rs/nd-triangulation/"

[features]
docs-rs = []

[package.metadata.docs.rs]
features = [ "docs-rs" ]

[dependencies]
cpp = "^0.5"

[build-dependencies]
cpp_build = "^0.5"

[dev-dependencies]
rand = "^0.7"
